# kg-rag

./: .env  .gitignore  README.md  config.py  get.py  load.py  pyproject.toml  query.py  upload.py
default_db/: catalog.kz  metadata.kz  n-0.hindex.ovf  nodes.statistics_and_deleted.ids  rels.statistics
test1/: data.kz  metadata.kz  n-0.hindex.ovf  nodes.statistics_and_deleted.ids  rels.statistics
